# JobSift

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  calendar.py  dashboard.py  interviews.py
backend/app/core/: config.py  security.py
backend/app/models/: calendar_event.py  interview.py  user.py
backend/app/repositories/: base.py  calendar_event.py  interview.py  user.py
backend/app/schemas/: calendar.py  dashboard.py  interview.py  user.py
backend/app/services/: auth.py  calendar.py  dashboard.py  interview.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_interviews.py  test_main.py
docs/: ARCHITECTURE.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/common/: LoadingSpinner.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx
frontend/src/features/auth/store/: authStore.ts
frontend/src/features/interviews/store/: interviewsStore.ts
frontend/src/pages/auth/: LoginPage.tsx
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  interview.ts
nginx/: default.conf
scripts/: README.md  check-completeness.sh  diagnose.sh  fix-permissions.sh  generate-key.sh  generate-lockfile.sh  generate-secret.py  health-check.sh  init.sql  install-deps.sh  quick-start.sh  setup-dev.sh
